--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -27,7 +27,9 @@
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12908842.md#1" target="_blank">【名家专栏】一届宣扬反美的美国政府</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12908842.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12908851-GettyImages-1230971236-1200x805-150x120.jpg" align ="left"></a>当中共持续监禁和奴役新疆的维吾尔人和其他少数民族，吞噬香港的自由制度，并掩盖中国（中共）病毒全球大流行的起源真相时，令人震惊的是，拜登政府和中共之间达成一致的少数几个领域之一竟是美国是多么可怕的国家。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月28日 3:22 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12908698.md#1" target="_blank">【名家专栏】“大重置”背后的秘密</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12908698.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12908965-GettyImages-462001048-150x120.jpg" align ="left"></a>近几个月来，数以百计的大公司和金融机构聚集在左派周围攻击保守派，甚至制定政策直接针对保守派的观点。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月28日 1:05 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12909231.md#1" target="_blank">周晓辉：蒋介石首提持久战 百团大战遭毛痛批</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12909231.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2015/08/1309100943112068-150x120.jpg" align ="left"></a>中共却在战报中称，歼灭日军1000余人；而日军的战报写的却是：在蔡家峪，日军亡167人，伤94人。刘茂恩将军回忆录中记载的是日军死伤400多人。中共究竟在哪里消灭了1000多日军呢？很显然，中共在夸大战果。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月28日 12:50 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12907382.md#1" target="_blank">【有冇搞错】拓展陆市被殴 特斯拉荆棘丛生</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12907382.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12908878-9959214e8c3212586c5b20368e631251-150x120.jpg" align ="left"></a>上海车展被“砸场”，特斯拉拓展市场可谓步履维艰。大车企遭中共媒体口诛笔伐，单纯为国产车的征途排除异己？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 10:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/29/n12914429.md#1" target="_blank">周晓辉：东方红曲调来自情歌 延安进行文革预演</a><br></h3>在中共几十年如一日的反复播放下，吹捧毛泽东的歌曲《东方红》可说是家喻户晓。迄今为止，大陆一些地方整点报时依旧采用的是该曲调。
+
+不过很多人不知道的是，《东方红》的曲调取材于陕北情歌《骑白马》，而《骑白马》则是根据流传了百年的山西西北情歌《芝麻油》改编而成的。改编者是一个在小学任教的名叫李锦祺的老师，他在整风期间的1.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 3:18 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/29/n12912034.md#1" target="_blank">夏林：《2021年战略竞争法》让中共梦难圆</a><br></h3>自拜登入主白宫后，中共非常得意，以为可以控制拜登和其政府，去做中共想做的事。但拜登上任不到百天，中共已经失望至极。固然，拜登对中共软弱有加，他的国务卿和国安顾问被中共的两位最高阶战狼当着全世界的面公然教训一番，他的气候特使访华时被中共塞到巴士尾部敬陪末座，与当年让奥巴马从飞机后门出来有得一比。但是，美国整体来说，对中共.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 10:35 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/28/n12911985.md#1" target="_blank">【有冇搞错】马云不投降 就叫他灭亡</a><br></h3>中共调查政府部门在蚂蚁金服上市审批中的问题，牵涉浙江、上交所和证监会。马云和蚂蚁面对的问题正在恶化。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 10:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/28/n12910485.md#1" target="_blank">慧真：勿被红歌迷 觉醒弃赤魔</a><br></h3>大陆唱红歌 歌皆吹红魔
