--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903581.md#1" target="_blank">田云：中共为何炒作病毒“污名化”？</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903581.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1OD5D4-600x399-150x120.jpg" align ="left"></a>中共却不敢面对和承认它自己的卖国、祸国、殃民的行径。“反华”这个罪名，实际上是中共迫害真正爱国者的最可耻的大棒。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 7:40 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12908274.md#1" target="_blank">【网海拾贝】外商进中国相当于羊入狼口</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12908274.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-668966538-1-150x120.jpg" align ="left"></a>中共挑起大陆民众向特斯拉展开了一场文革式的批斗，中共官媒集体炮轰，车主大闹；多地开展特斯拉不准入内活动，邯郸某医院门口放了一个醒目的红色告示牌，上写“特斯拉车，禁止入内”。中共这是想要特斯拉的技术还是想要特斯拉的数据库？或者是想要上火箭回收技术而马斯克不肯？这是嫌外国企业撤资还不够快要踩油门加速吗？//@realcai.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 4:50 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12908179.md#1" target="_blank">中共罪行录之十一：延安整风</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12908179.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/05/yananDJY-600x400-150x120.gif" align ="left"></a>1942年冬春之际，在中共战时首府延安，随即在中共领导的各根据地，开始了一场延续多年的大规模整风运动。由于这场运动是以延安为中心，又以在延安开展的运动最为典型，故史称“延安整风运动”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 4:15 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12907313.md#1" target="_blank">王赫：赵婷奥斯卡摘冠与中共党庆“三百”计划</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12907313.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12905153-2104252327321487-150x120.jpg" align ="left"></a>美东时间4月26日，美国华裔导演赵婷凭执导作《无依之地》（Nomadland）拿下第93届奥斯卡最佳导演奖，成为获此殊荣的第3位亚洲导演，更是华裔女性第一人。此外，该片还另摘取最佳影片、最佳女主角2座大奖。此事引爆国际舆论。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 11:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12906720.md#1" target="_blank">钟原：习近平广西考察 暗示当前困难大？</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12906720.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906751-GettyImages-1232476892-150x120.jpg" align ="left"></a>4月23日，习近平专程到海南参加三艘军舰交接仪式后，4月25日到广西考察。新华社报导，习近平首先来到广西桂林全州县的红军长征湘江战役纪念园。习近平赴各地考察，只要当地有红色纪念馆，习近平基本必去，还要借题发挥。
+
+4月26日，新华社报导《习近平谈湘江战役：中国革命成功的奥秘就是靠理想信念》。习近平说，“湘江战役是红.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 10:28 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12907383.md#1" target="_blank">沈舟：中共航母舰载机失事细节说明了什么？</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/27/n12907383.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12907397-GettyImages-630829502-150x120.jpg" align ="left"></a>4月26日，中共党媒新华网首页报导《泪目！战友喊话我国航母舰载机事业上第一位英烈张超：歼-15突破夜间起降技术了》，内文标题是《这项事业，需要无惧生死的人——“人民英雄”张超烈士牺牲5周年祭 》，透露了中共航母舰载机发生的一次事故，也反映了中共航母舰载机的真实水平。
+中共航母舰载机和飞行员都是试验品
+新华社的文章主.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 10:17 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12907089.md#1" target="_blank">观雨堂主：特斯拉遭遇非竞争的邪恶对手</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12907089.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/000_1R94LF-150x120.jpg" align ="left"></a>4月19日，上海国际车展开幕第一天，身上T恤印着红色醒目的“刹车失灵”四个字的郑州女子，突然跳上特斯拉展台，大喊“特斯拉刹车失灵……”。此事震惊了整个中共国，也惊动全球，以至于让无数人暂时忘记了中共病毒的可怕，也不顾此事与台海、南海剑拔弩张的紧张局势，是否存在关联。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 5:14 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12906994.md#1" target="_blank">李林一：习近平为何放弃赴海南博鳌论坛</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12906994.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12907059-GettyImages-1232458324-150x120.jpg" align ="left"></a>4月23日，中共海军三型主战舰艇在海南三亚某军港交接入列。中共党魁习近平出席活动并登上舰艇。海南的博鳌论坛在4月21日刚刚闭幕，习在4月20日以视频的方式讲话。两次活动仅仅相差3日，为何习不先参加博鳌论坛，然后按其出访惯例，顺便访问下海南，再参加军方舰艇交接仪式呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 5:03 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12907025.md#1" target="_blank">林忌：中国人的弹性骄傲</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12907025.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12907057-2021-04-26_153748-150x120.png" align ="left"></a>在三月初仍是中国官媒报道提及的“中国骄傲”，出生与成长于北京的赵婷，作为首位在中国大陆出生的奥斯卡最佳导演，目前却在大陆受到全面的封杀，不但奥斯卡得奖不得报道，更被一些“小粉红”攻击成为“辱华”，再次显示所谓“辱华”的新底线，以及“小粉红”玻璃心之脆弱，是如何的荒谬。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 4:41 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12906225.md#1" target="_blank">【名家专栏】中共须停止从假币假货中牟暴利</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12906225.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906255-Masks3-700x420-150x120.jpg" align ="left"></a>尽管中国保证将打击假冒伪劣产品和保护知识产权，但中共继续从假货销售中获得数十亿美元，现在这个问题影响到美国经济的一个领域，而许多人没觉察到。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 4:15 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12906878.md#1" target="_blank">【网海拾贝】全方位抗共已成美国长远国策</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12906878.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12858596-148169-150x120.jpeg" align ="left"></a>苹果日报：4月21日，美国参议院外交委员会大比数通过《战略竞争法案》，整部文件长达281页，全部瞄准中共，几乎覆盖外交、经济、科技和军事等各个层面。这个法案预计将在参议院获得大比数通过，然后由拜登签署执行。单在2020年，美国国会通过涉及中共的法案就有十项，这还不包括每年度的《国防授权法》应对军备竞争的部分。关于新疆、.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 2:42 AM			</td></tr>
@@ -24,18 +36,6 @@
 哎呀呀，摩托在里边！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 12:35 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903873.md#1" target="_blank">【网海拾贝】与中共合作？西方不被玩死才怪</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903873.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1287745929-1-150x120.jpg" align ="left"></a>习近平在气候峰会上发言用“碳达峰”这个词遮遮掩掩中国将继续增加碳排放。中国将继续增加碳排放的理由是“中国仍然是发展中国家”。习近平的这种逻辑立即遭到国际舆论的批评。西方与中国一起合作“减排”，会被中共玩死。——@LifetimeUSCN......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 9:42 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903795.md#1" target="_blank">袁斌：王毅称中共极权也是一种民主 遭网友痛斥</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903795.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12868241-GettyImages-1158767215-600x400-150x120.jpg" align ="left"></a>民主不只有一种形式，但不同形式的民主，其本质都是相同的，都是人民做主。在这一点上，民主与极权专制的区别是显而易见的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 8:34 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903262.md#1" target="_blank">杨威：王岐山也对美喊话 王毅再扮战狼</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903262.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12868241-GettyImages-1158767215-600x400-150x120.jpg" align ="left"></a>4月24日，中共党媒新华社报导，中共国家副主席王岐山在纪念中美“乒乓外交”50周年活动上视频致辞。中共派出王岐山对美喊话，王毅也在另外的场合又扮演战狼，中美对抗难以缓和。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 10:55 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12901749.md#1" target="_blank">探秘世界各国的真实军力—英国欲重塑形象</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12901749.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12901798-GettyImages-1145054632-150x120.jpg" align ="left"></a>印太地区火药味越来越浓，中共的军事扩张咄咄逼人，也引起了欧洲国家的警惕，法国舰队已经进入印度洋。2021年，英国舰队也会来到印太地区。
-
-按照美国军事网站“全球火力”（Global Firepower）的排行，英国军力位列世界第8位。这样一来，世界军力前8名的国家中，美国、俄罗斯、中国、印度、日本、韩国、法国、英国.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 10:49 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903194.md#1" target="_blank">民主党拒付百万保证金 亚利桑那审计选票或继续</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/25/n12903194.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/2011070824451528.jpg" align ="left"></a>周四（4月22日），就在亚利桑那州即将启动对2020大选中马里科帕县（Maricopa County）210万张选票进行全面审计的前一天，州民主党提出紧急诉讼，要求法官下令暂时停止审计。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 9:55 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902918.md#1" target="_blank">王友群：第八任中共党魁胡耀邦的最后结局</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902918.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902920-2068c8cef8b2bae545088c075d390fb8-600x400-150x120.jpeg" align ="left"></a>胡耀邦是中共体制内的开明派。1981年6月，在中共十一届六中全会上，胡当选中共中央主席。1982年中共十二大后，不设中共中央主席，胡成为中共中央总书记。1987年1月，胡被迫辞去中共中央总书记职务。但在1987年10月的中共十三大上，胡仍当选中共政治局委员。
-
-1978年中共十一届三中全会后，胡耀邦是支持邓小平进行.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 7:50 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12903066.md#1" target="_blank">周晓辉：张学良承认是党员 中共推动西安军事政变</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12903066.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12903102-KMT_officials_in_the_Xian_Incident-600x400-150x120.jpg" align ="left"></a>中共刻意让蒋介石替张学良背几十年黑锅，目的显然是要将其刻画成不抵抗日军侵略的不堪形象，从而凸显中共在抗战中的“巨大作用”。但谎言永远是谎言，一旦揭开，中共画皮下邪恶的面目就暴露在光天化日之下。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 6:42 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902910.md#1" target="_blank">岳山：东航陪睡事件逆转抓人 背后水有多深？</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902910.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902968-donghang4-600x400-1-150x120.jpg" align ="left"></a>总部在上海的中国东方航空公司几天前爆出性贿赂丑闻，剧中女角是有“劳模空姐”之称的党支书空姐倪高平，她是东航客舱部高级经理，被举报受上司教唆向更高层次的官员仇某进行性贿赂，并且有不堪入目的微信截图为证。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 4:19 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902566.md#1" target="_blank">【名家专栏】从安徒生童话看取消文化</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902566.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902569-Emperor_Clothes_01-1-150x120.jpg" align ="left"></a>很多年前，当我读到汉斯?克里斯汀?安徒生（Hans Christian Andersen）的故事《国王的新衣》时，在一开始的印象并不深刻。有谁会看不到一个裸体没穿衣服的男人呢？可是这个故事常被诠释成是在讨论表象及现实的问题。任何不注重表象的人，都能看见国王是没穿衣服的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 2:30 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902525.md#1" target="_blank">【名家专栏】美日首脑会晤：承诺再承诺</a><br></h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/24/n12902525.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902647-GettyImages-1312842074-150x120.jpg" align ="left"></a>美国对日本防务的承诺是真诚的，但看似矛盾的是，如果中共对日本发动全面进攻，美国很容易兑现承诺。如果中共采取目前的“打擦边球”的做法，日本和整个地区可能会很快陷入严重的麻烦。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 10:59 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12907005.md#1" target="_blank">【纪元专栏】2021年加国联邦预算大耗国家之资</a><br></h3>今年加拿大联邦政府预算案4月19日最终出来，人们发现，特鲁多领导的自由党政府仍保持其一贯特色，即无视政府不断膨胀的债务，继续寅吃卯粮。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 4:05 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12905585.md#1" target="_blank">灵根自植?长戚戚</a><br></h3>“平生不作亏心事，夜半敲门也不惊”，自家摆酒设宴，主人家不在场献辞祝酒，怕的是什么？多年来鬼话连篇的大外宣和无法无天，一朝自己戮破揭穿，这台戏怎样唱下去？“君子坦荡荡，小人长戚戚”，赤魔岂无忧惧？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 6:43 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/26/n12905934.md#1" target="_blank">千百度：网友吐槽五一调休“折腾劳动者”</a><br></h3>眼看着一年一度的五一假期就要到了。
