--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,7 +7,7 @@
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919222.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919445-shanghai-320x200.png" align ="left"></a><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919222.md#1" target="_blank">五一武汉上海办音乐节 人潮挤爆未戴口罩</a><br></h3>今年大陆五一假期首日，最先爆出中共肺炎疫情的武汉市举行大型“草莓音......<br><img align="bottom" src="https://raw.githubusercontent.com/abqqad3453/www/master/t/ntdtv/time.gif">05月02日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919295.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2017/05/1256039-320x200.jpg" align ="left"></a><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919295.md#1" target="_blank">台驻法代表受邀去美驻外使馆交流 42年来首次</a><br></h3>美国驻法大使馆4月30日自台美断交以来，首度邀请中华民国驻法代表进......<br><img align="bottom" src="https://raw.githubusercontent.com/abqqad3453/www/master/t/ntdtv/time.gif">05月02日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919070.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919584-GettyImages-1232640127-320x200.jpg" align ="left"></a><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919070.md#1" target="_blank">【疫情5.2】法国医疗援助设备抵达印度</a><br></h3>据约翰?霍普金斯大学的统计数据，截至美东夏令时周日（5月2日）上午......<br><img align="bottom" src="https://raw.githubusercontent.com/abqqad3453/www/master/t/ntdtv/time.gif">05月02日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919296.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/04/id12879913-GettyImages-1232301479-320x200.jpg" align ="left"></a><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919296.md#1" target="_blank">布林肯赴伦敦参加G7外长会 联合盟友施压中共</a><br></h3>七国集团（G7）外长会议将于5月3日至5日在英国伦敦举行。作为美国......<br><img align="bottom" src="https://raw.githubusercontent.com/abqqad3453/www/master/t/ntdtv/time.gif">05月02日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919296.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/04/id12879913-GettyImages-1232301479-320x200.jpg" align ="left"></a><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919296.md#1" target="_blank">布林肯赴伦敦参加G7外长会 联盟施压中共</a><br></h3>七国集团（G7）外长会议将于5月3日至5日在英国伦敦举行。作为美国......<br><img align="bottom" src="https://raw.githubusercontent.com/abqqad3453/www/master/t/ntdtv/time.gif">05月02日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/30/n12916781.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/03/d90437fb2e04c788fd65dc284edc2bd7-320x200.jpg" align ="left"></a><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/30/n12916781.md#1" target="_blank">“我是活生生的见证”亡命徒找到重生路</a><br></h3>“这样一个五毒俱全的人，一朝得法修炼就戒掉了那么多的恶习，从此成了......<br><img align="bottom" src="https://raw.githubusercontent.com/abqqad3453/www/master/t/ntdtv/time.gif">05月02日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/1/n12918426.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/08/1210291432372519-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/1/n12918426.md#1" target="_blank">分析：中共是自己的最大敌人</a><br></h3>知名中国政经专家、美国克雷蒙特麦肯纳学院（CMC）教授裴敏欣（Mi......<br><img align="bottom" src="https://raw.githubusercontent.com/abqqad3453/www/master/t/ntdtv/time.gif">05月02日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919112.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919112.md#1" target="_blank">浙江一病例隔离14天后才呈阳性 曾搭乘火车</a><br></h3>日前，浙江省金华市义乌市出现一起中共肺炎病例，是在隔离14天后才核......<br><img align="bottom" src="https://raw.githubusercontent.com/abqqad3453/www/master/t/ntdtv/time.gif">05月02日</td></tr>
