--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -24,6 +24,6 @@
 <h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/29/n12913797.md#1" target="_blank">预防骨质疏松症药物 会增加骨折风险</a><br></h3>
 <h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/29/n12914543.md#1" target="_blank">马铃薯养胃 改善胃炎胃溃疡！5种健胃食物这样吃</a><br></h3>
 <h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/30/n12915091.md#1" target="_blank">每分钟死2.5人 印度疫情几乎垂直上升 揭4大原因</a><br></h3>
-<h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/4/30/n12916277.md#1" target="_blank">【重播】新冠另一种疗法</a><br></h3>
+<h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/21/5/2/n12919328.md#1" target="_blank">长时间工作与心脏病复发率高相关</a><br></h3>
 <tr><td><h3><a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/abqqad3453/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/abqqad3453/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/abqqad3453/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/abqqad3453/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
