--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -22,7 +22,7 @@
 <h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/27/n12909581.md#1" target="_blank">【慧聊养生】未老骨先松？现在救还来得及</a><br></h3>
 <h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/29/n12913778.md#1" target="_blank">不吃早餐肾虚、伤胃 养胃早餐和进食时间大公开</a><br></h3>
 <h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/29/n12913797.md#1" target="_blank">预防骨质疏松症药物 会增加骨折风险</a><br></h3>
-<h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/29/n12914543.md#1" target="_blank">马铃薯养胃 改善胃炎胃溃疡！5种健胃食物这样吃</a><br></h3>
+<h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/29/n12914543.md#1" target="_blank">马铃薯上榜？5种养胃食物这样吃 改善胃溃疡防胃癌</a><br></h3>
 <h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/30/n12915091.md#1" target="_blank">每分钟死2.5人 印度疫情几乎垂直上升 揭4大原因</a><br></h3>
 <h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919328.md#1" target="_blank">长时间工作与心脏病复发率高相关</a><br></h3>
 <tr><td><h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
