--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -6,7 +6,7 @@
 <tr><td width="742"><h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12918086.md#1" target="_blank">一季度珀斯公寓销量增58% 创8年来最高纪录</a><br></h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12918086.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918091-ebb8f31c9182803ddc3b252c1ad71103-150x120.jpg" align ="left"></a>根据西澳房地产协会（REIWA）的最新数据显示，今年第一季度珀斯公寓销售量达到了2013年以来的最高记录。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 6:36 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12918986.md#1" target="_blank">世界最重芒果在哥伦比亚诞生 重达4公斤多</a><br></h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12918986.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918987-shutterstock_141314695-150x120.jpg" align ="left"></a>虽然芒果原产于亚洲地区，台湾和大陆都是主要产地，但世界最重的芒果却诞生在产量相对较低的哥伦比亚，其重量超过4公斤。这颗巨无霸芒果看起来像人头一样大，其它芒果跟它比起来简直就是小巫见大巫。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 4:35 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12918886.md#1" target="_blank">全球百大最具影响力企业出炉 台积电上榜</a><br></h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12918886.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918888-GettyImages-1231936348-150x120.jpg" align ="left"></a>台积电是全球晶圆代工龙头，在台湾半导体产业和世界半导体产业都占有举足轻重的地位，素有台湾“护国神山”的美誉。在美国《时代》杂志日前公布的全球百大最具影响力企业名单中，台积电便榜上有名，而且是唯一上榜的台湾企业。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 2:22 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/29/n12914543.md#1" target="_blank">马铃薯养胃 改善胃炎胃溃疡！5种健胃食物这样吃</a><br></h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/29/n12914543.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12914703-shutterstock_149695568-150x120.jpg" align ="left"></a>马铃薯、莲藕等食物，都有养胃的功效。医师教你吃对养胃食物，改善胃炎、胃溃疡，还防胃癌。马铃薯是全球五大农作物之一，含有大量易于人体消化的营养成分，以及健胃的功效。中医认为，马铃薯性平味甘，归胃经，能和胃调中，治疗胃炎、胃溃疡等疾病。大蒜含有丰富的有机锗、硒、氨基酸、矿物质等营养物质，具有抑菌、杀菌、预防胃癌......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 6:09 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/29/n12914543.md#1" target="_blank">马铃薯上榜？5种养胃食物这样吃 改善胃溃疡防胃癌</a><br></h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/29/n12914543.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12914703-shutterstock_149695568-150x120.jpg" align ="left"></a>马铃薯、莲藕等食物，都有养胃的功效。医师教你吃对养胃食物，改善胃炎、胃溃疡，还防胃癌。马铃薯是全球五大农作物之一，含有大量易于人体消化的营养成分，以及健胃的功效。中医认为，马铃薯性平味甘，归胃经，能和胃调中，治疗胃炎、胃溃疡等疾病。大蒜含有丰富的有机锗、硒、氨基酸、矿物质等营养物质，具有抑菌、杀菌、预防胃癌......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 6:09 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/27/n12909431.md#1" target="_blank">孩子容易流鼻血 有4大原因！1招快速止血</a><br></h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/27/n12909431.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12917001-nose-bleed_1559072021-copy-150x120.jpg" align ="left"></a>你家里的孩子是否也常流鼻血呢？小孩容易流鼻血是什么原因，如何有效处理和预防？1. 小孩容易磕碰鼻子、爱挖鼻孔。90%儿童流鼻血，都是在鼻腔的利特尔区（Little's area），即鼻中隔最前下方的黏膜下血管密集的部位。如果孩子突然流鼻血，家长可以立刻用食指和拇指将孩子鼻前上......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月01日 11:11 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/30/n12917238.md#1" target="_blank">车评：连成一线 2021 Lexus IS 300 RWD</a><br></h3><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/30/n12917238.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12917243-2021_Lexus_IS300_01-150x120.jpg" align ="left"></a>骤眼看，2021年款的Lexus IS 300，好像只是第三代IS的普通Facelift版本而已，但是内里的更新实际上又比看到的更多。测试的IS 300，虽是车系中的最低版本，但在驾驶时的乐趣一点也不减。
 ?
